test/asm/nested-bad-interpolation.err
error: nested-bad-interpolation.asm(1):
    Interpolated symbol "a" is a reserved keyword; add a '#' prefix to use it as a raw symbol
error: nested-bad-interpolation.asm(1):
    Interpolated symbol "" does not exist
error: nested-bad-interpolation.asm(1):
    syntax error, unexpected end of line
error: nested-bad-interpolation.asm(2):
    Interpolated symbol "b" is a reserved keyword; add a '#' prefix to use it as a raw symbol
warning: nested-bad-interpolation.asm(2): [-Wobsolete]
    Treating strings as numbers is deprecated
error: nested-bad-interpolation.asm(2):
    Strings as numbers must be a single charmap unit
error: nested-bad-interpolation.asm(3):
    Interpolated symbol "c" is a reserved keyword; add a '#' prefix to use it as a raw symbol
error: nested-bad-interpolation.asm(3):
    Interpolated symbol "" does not exist
warning: nested-bad-interpolation.asm(3): [-Wobsolete]
    Treating strings as numbers is deprecated
error: nested-bad-interpolation.asm(3):
    Strings as numbers must be a single charmap unit
Assembly aborted with 8 errors!
